--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,272 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  display: flex;
+  height: 100vh;
+  background-color: #E9EEED;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.sidebar {
+  width: 350px;
+  background-color: #ffffff;
+  color: #777;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* border: solid 1px red; */
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  border-radius: 0 2rem 0 0;
+  height: auto;
+}
+
+.logo {
+  width: 20%; 
+  margin-bottom: 20px;
+}
+
+button {
+  width: 100%;
+  padding: 1em;
+  border-radius:.5rem;
+  background-color: #26a65b;
+  margin-bottom: 20px;
+  color: #ffffff;
+  font-weight: bold;
+  border: none;
+  text-align: left;
+  font-size: large;
+}
+.fa-qrcode {
+  margin-right: 1rem;
+  margin-left: .1rem;
+}
+
+.sidebar-links {
+  width:100%;
+}
+
+li {
+  list-style-type: none;
+  padding: 1rem;
+  font-size: medium;
+  font-weight:bold;
+
+
+}
+li .fas {
+  margin-right: 1rem;
+
+}
+
+a {
+  text-decoration: none;
+  color: #777;
+}
+
+/* content styles */
+.content {
+  margin: 25px;
+  width: 100%;
+  /* border: 1px solid red; */
+}
+
+/* header  */
+.header {
+  /* background-color: #3498db; */
+  /* color: white; */
+  /* padding: 20px; */
+  position: relative;
+  z-index: 1;
+  display: flex;
+  align-items: center; /* Center the content vertically */
+  justify-content: flex-start; /* Align items to the start */
+}
+
+.menu-icon {
+  margin-right: 25px; /* Space between icon and title */
+  cursor: pointer; /* Change cursor to pointer */
+  font-size: 24px; /* Adjust icon size as needed */
+}
+
+/* horizontal line */
+
+hr{
+  border: none;
+  height: 1.5px;
+  background-color: #fffafa;
+  width: 100%;
+  margin: 2rem 0;
+}
+
+/*  dashboard welcome page */
+
+.student-welcome{
+  display: flex;
+  flex-direction: row;
+  /* justify-content: space-between; */
+  align-items: center;
+  color: #f0f0f0;
+  background: linear-gradient(to left, #29582b, #26a65b,#29582b);
+  /* position: relative; */
+  border-radius: .5rem;
+  padding: 3rem 1.5rem;
+}
+
+
+.student-image {
+  float: end;
+  position: absolute;
+  z-index: 2; 
+  /* border: 1px solid rgb(153, 71, 51); */
+  margin-bottom: 100px;
+  width: 80%;
+  /* float:left; */
+}
+
+.student-image img{
+  width: 350px;
+  /* position: absolute;
+  z-index: 2;  */
+   margin-left: 60%;
+}
+
+/* info page */
+.student-info {
+  padding: .5rem 1.5rem;
+  background-color: #F75A5B;
+  color: #fff;
+  border-radius: .5rem;
+  margin: 1rem 0;
+}
+
+.student-info a{
+text-decoration: underline;
+color: #ffffff;
+}
+
+/* sutend details */
+.sudent-details{
+  display: flex;
+  /* border: 1px solid red; */
+  flex-direction: row;
+  justify-content: space-between;
+  /* width: 80%; */
+
+}
+
+
+.students {
+  background-color: #21262e;
+  /* border: 1px solid red; */
+  width: 32%;
+  border-radius: .5rem;
+  padding: 1.5rem;
+  color:#fff;
+  display: flex;
+  align-items: center;  
+}
+
+.students i{
+  font-size: 34px;
+  margin: .5rem;
+}
+
+.students:first-child{
+  background-color: #26a65b
+}
+.students:last-child{
+  background-color: #f87329;
+}
+
+/* sutend details */
+.course-details{
+  display: flex;
+  /* border: 1px solid red; */
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+
+.course {
+  background-color: #fff;
+  width: 32%;
+  border-radius: .5rem;
+  padding:  1.5rem;
+  color:#777;
+  margin: 1rem 0;
+  text-align: left;
+
+}
+
+.course h2, p {
+  padding-top: .5rems;
+  padding-bottom: .5rem;
+}
+
+.course img {
+  width: 100%;
+  border-radius: .5rem;
+  padding-top: .5rems;
+  padding-bottom: .5rem;
+}
+
+
+
+/* .student-info {
+  position: relative;
+  margin-top: -50px;  
+}
+
+.student-image {
+  width: 100px;  
+  height: auto;
+  position: relative;
+  z-index: 2;  
+} */
+/* 
+.sidebar-links {
+  list-style-type: none;
+  padding: 0;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.sidebar-links li {
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+  background-color: #26a65b;
+  transition: background-color 0.3s;
+}
+
+.sidebar-links li:hover {
+  background-color: #34495e;  
+}
+
+.content {
+  flex-grow: 1;
+  background-color:#f0f0f0;
+  position: relative;
+  padding: 20px;
+}
+
+.header {
+  background-color: #3498db;
   color: white;
+  padding: 20px;
+  position: relative;
+  z-index: 1;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+*/
