Update app.css corrected spellings

--- a/src/App.css
+++ b/src/App.css
@@ -251,7 +251,7 @@ color: #ffffff;
       width: auto;
       margin: 10px;
   }
-  .sudent-details{
+  .student-details{
       flex-direction: column;
       width: 100%;
   }
